# four-bit-adder

./: Doxyfile  README.md
source/FourBitAdder/: FourBitAdder.h  FullAdder.h  HalfAdder.h
source/FourBitAdder/intern/: FourBitAdder.cpp  FullAdder.cpp  HalfAdder.cpp  LogicGates.cpp
tests/: CMakeLists.txt
tests/gtests/: CMakeLists.txt  GTestFourBitAdder.cpp  GTestFullAdder.cpp  GTestHalfAdder.cpp
